# caligo

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  plan.md
circuits/: merkle.circom  poseidon.circom  withdraw.circom
client/: package-lock.json  package.json  tsconfig.json
client/src/: index.ts  types.d.ts
client/src/crypto/: encryption.ts  index.ts  merkle.ts  poseidon.ts  secrets.ts
client/src/proof/: index.ts  prover.ts  worker-prover.ts  worker-thread.ts
client/src/relayer/: discovery.ts  index.ts  types.ts
client/src/sdk/: index.ts  mixer.ts
client/src/wallet/: index.ts  notestore.ts
client/tests/: cross-validation.test.ts  crypto.test.ts  e2e.test.ts  relayer.test.ts  wallet.test.ts  worker-prover.test.ts
contracts/mixer_pool/: Cargo.toml
contracts/mixer_pool/src/: errors.rs  lib.rs  merkle.rs  poseidon.rs  storage.rs  tests.rs  verifier.rs  vk_constants.rs
contracts/mixer_pool/test_snapshots/tests/: test_address_to_field_bytes_deterministic.1.json  test_address_to_field_bytes_different_addrs.1.json  test_deposit_adds_to_root_history.1.json  test_deposit_count_increments.1.json  test_deposit_success.1.json  test_deposit_updates_root.1.json  test_initialize_success.1.json  test_initialize_zero_depth.1.json  test_multiple_deposits.1.json  test_nullifier_not_spent_initially.1.json  test_root_history_circular_buffer.1.json  test_same_commitment_order_produces_same_root.1.json  test_tree_capacity.1.json  test_tree_full_rejects_deposit.1.json  test_withdraw_invalid_root.1.json  test_withdraw_negative_fee.1.json
contracts/relayer_registry/: Cargo.toml
contracts/relayer_registry/src/: errors.rs  lib.rs  storage.rs  tests.rs
contracts/relayer_registry/test_snapshots/tests/: test_deactivate_by_admin.1.json  test_deactivate_by_relayer.1.json  test_deactivate_unauthorized.1.json  test_get_active_relayers.1.json  test_initialize_success.1.json  test_initialize_twice.1.json  test_reactivate.1.json  test_register_fee_too_high.1.json  test_register_relayer.1.json  (+2 more)
indexer/: Cargo.toml
indexer/src/: api.rs  db.rs  listener.rs  main.rs  merkle.rs  poseidon.rs  state.rs
indexer/tests/: bench_pairing.rs
relayer/: Cargo.toml
relayer/src/: main.rs  relay.rs  rpc.rs  validate.rs
scripts/: bench_verifier.rs  benchmark_verifier.rs  deploy.sh  export_vk_rust.js  setup_ceremony.sh
tests/circuits/: test_withdraw.js
