[workspace]
resolver = "2"
members = [
    "contracts/mixer_pool",
    "contracts/relayer_registry",
]
exclude = [
    "indexer",
    "relayer",
]

[workspace.dependencies]
soroban-sdk = "22.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
